LMP 링크 재연결

--- a/work/LMP_001.html
+++ b/work/LMP_001.html
@@ -5,16 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- css js inject -->
-    <link rel="stylesheet" href="./work/css/biz2/reset.css">
-    <link rel="stylesheet" href="./work/css/biz2/common.css">
-    <link rel="stylesheet" href="./work/css/biz2/layout.css">
-    <link rel="stylesheet" href="./work/css/biz2/main.css">
-    <link rel="stylesheet" href="./work/css/biz2/style.css">
-
-    <link rel="stylesheet" href="./work/css/biz2/swiper-bundle.min.css" />
-    <script src="./work/js/biz2/jquery-3.7.1.min.js"></script>
-    <script src="./work/js/biz2/swiper-bundle.min.js"></script>
-    <script src="./work/js/biz2/script.js"></script>
+    <link rel="stylesheet" href="../css/biz2/reset.css">
+    <link rel="stylesheet" href="../css/biz2/common.css">
+    <link rel="stylesheet" href="../css/biz2/layout.css">
+    <link rel="stylesheet" href="../css/biz2/main.css">
+    <link rel="stylesheet" href="../css/biz2/style.css">
+    <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
+    <script src="../js/biz2/jquery-3.7.1.min.js"></script>
+    <script src="../js/biz2/swiper-bundle.min.js"></script>
+    <script src="../js/biz2/script.js"></script>
     <title>울산광역시 평생교육이용원</title>
 </head>
 
@@ -88,7 +87,7 @@
                 <button type="button" class="btns">로그인</button>   
             </div>
             <a href="#" class="register-btn g">
-                <img src="./work/images/biz2/ic_register.svg" alt="사용기관 등록 이미지">
+                <img src="../images/biz2/ic_register.svg" alt="사용기관 등록 이미지">
                 <h2 class="register-btn-txt txt-c">사용기관 등록</h2>
             </a>
         </div>
