--- a/work/index.html
+++ b/work/index.html
@@ -425,6 +425,14 @@
         </tr>
         <tr class="line done">
           <th>평생교육이용권</th>
+          <td>학습자정보</td>
+          <td>page</td>
+          <td><a href="./IIP_301.html" target="blank">IIP_301.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
           <td>기관 정보 수정</td>
           <td>page</td>
           <td><a href="./IIP_400.html" target="blank">IIP_400.html</a></td>
@@ -499,7 +507,7 @@
           <th>평생교육이용권</th>
           <td>자료실</td>
           <td>page</td>
-          <td><a href="./INP_100.html" target="blank">INP_100.html</a></td>
+          <td><a href="./LNP_100.html" target="blank">LNP_100.html</a></td>
           <td class="ac">O</td>
           <td></td>
         </tr>
@@ -507,7 +515,7 @@
           <th>평생교육이용권</th>
           <td>자료실 상세</td>
           <td>page</td>
-          <td><a href="./INP_101.html" target="blank">INP_101.html</a></td>
+          <td><a href="./LNP_101.html" target="blank">LNP_101.html</a></td>
           <td class="ac">O</td>
           <td></td>
         </tr>
@@ -515,7 +523,7 @@
           <th>평생교육이용권</th>
           <td>자주하는질문</td>
           <td>page</td>
-          <td><a href="./INP_200.html" target="blank">INP_200.html</a></td>
+          <td><a href="./LNP_200.html" target="blank">LNP_200.html</a></td>
           <td class="ac"></td>
           <td></td>
         </tr>
@@ -523,7 +531,7 @@
           <th>평생교육이용권</th>
           <td>자주하는질문 상세</td>
           <td>page</td>
-          <td><a href="./INP_201.html" target="blank">INP_201.html</a></td>
+          <td><a href="./LNP_201.html" target="blank">LNP_201.html</a></td>
           <td class="ac"></td>
           <td></td>
         </tr>
