--- a/work/IIP_301.html
+++ b/work/IIP_301.html
@@ -38,21 +38,15 @@
                         </div>
                     </li>
                     <li>
-                        <span class="tit">사용안내</span>
-                        <div class="link-item">
-                            <a href="#">사용처안내</a>
-                        </div>
-                    </li>
-                    <li>
                         <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
                             <a href="#">사용처 안내</a>
                             <a href="#">사용기관 신청 현황</a>
-                            <a href="#">이용권 사용내역</a>
-                            <a href="#">교육과정 정보</a>
-                            <a href="#">학습자 정보</a>
+                            <a href="#" class="hidden">이용권 사용내역</a>
+                            <a href="#" class="hidden">교육과정 정보</a>
+                            <a href="#" class="hidden">학습자 정보</a>
                             <a href="#">기관 정보 수정</a>
-                            <a href="#">사용기관 연수</a>
+                            <a href="#" class="hidden">사용기관 연수</a>
                             <a href="#">서약서 동의</a>
                         </div>
                     </li>
@@ -62,7 +56,7 @@
                             <a href="#">공지사항</a>
                             <a href="#">자료실</a>
                             <a href="#">자주하는질문</a>
-                            <a href="#">문의사항</a>
+                            <a href="#">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -77,7 +71,8 @@
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
                 <span class="arrow">이용권 사용기관</span>
-                <span class="arrow">이용권 사용내역</span>
+                <span class="arrow">학습자 정보</span>
+                <span class="arrow">학습자 정보 상세</span>
             </div>
         </div>
     </div>
@@ -109,15 +104,9 @@
                 </table>
             </div>
             <div class="top-info-group">
-                <h3>학습자 정보</h3>
+                <h3>학습 정보</h3>
                 <div class="flex-ae">
-                    <small><em class="color-red">*</em> 승인내역중 부분취소는 <em class="color-blue">파란색</em>, 전체취소는 <em class="color-red">빨간색</em>으로 화면에 출력됩니다.</small>   
-                    <label for="select-view" class="blind">노출 조건 선택</label>
-                    <select id="select-view">
-                        <option value="1">10건 보기</option>
-                        <option value="2">20건 보기</option>
-                        <option value="3">30건 보기</option>
-                    </select>                    
+                    <small><em class="color-red">*</em> 승인내역중 부분취소는 <em class="color-blue">파란색</em>, 전체취소는 <em class="color-red">빨간색</em>으로 화면에 출력됩니다.</small>                       
                 </div>                    
             </div>      
             <div class="com-view-table">
@@ -168,7 +157,7 @@
                     </tbody>
                 </table>
                 <div class="btns-bottom">
-                    <button type="button" class="btns">목록</button>
+                    <button type="button" class="btns btn-list">목록</button>
                 </div>
             </div>
         </div>
