--- a/work/IIP_400.html
+++ b/work/IIP_400.html
@@ -38,21 +38,15 @@
                         </div>
                     </li>
                     <li>
-                        <span class="tit">사용안내</span>
-                        <div class="link-item">
-                            <a href="#">사용처안내</a>
-                        </div>
-                    </li>
-                    <li>
                         <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
                             <a href="#">사용처 안내</a>
                             <a href="#">사용기관 신청 현황</a>
-                            <a href="#">이용권 사용내역</a>
-                            <a href="#">교육과정 정보</a>
-                            <a href="#">학습자 정보</a>
+                            <a href="#" class="hidden">이용권 사용내역</a>
+                            <a href="#" class="hidden">교육과정 정보</a>
+                            <a href="#" class="hidden">학습자 정보</a>
                             <a href="#">기관 정보 수정</a>
-                            <a href="#">사용기관 연수</a>
+                            <a href="#" class="hidden">사용기관 연수</a>
                             <a href="#">서약서 동의</a>
                         </div>
                     </li>
@@ -62,7 +56,7 @@
                             <a href="#">공지사항</a>
                             <a href="#">자료실</a>
                             <a href="#">자주하는질문</a>
-                            <a href="#">문의사항</a>
+                            <a href="#">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -77,9 +71,7 @@
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
                 <span class="arrow">이용권 사용기관</span>
-                <span class="arrow">교육과정 정보</span>
-                <span class="arrow">교육과정 정보 상세</span>
-                <span class="arrow">교육과정 정보 수정</span>
+                <span class="arrow">기관 정보 수정</span>
             </div>
         </div>
     </div>
@@ -171,7 +163,9 @@
                             </th>
                             <td colspan="5">
                                 <p>qwer1234@*****.gmail.com</p> 
-                                <p>전자우편 수신동의</p>                       
+                                <p class="mail-agree">전자우편 수신동의
+                                    <span class="ico"></span>
+                                </p>                       
                             </td>                                    
                         </tr>
                         <tr>
@@ -257,19 +251,15 @@
                                         <label for="chk-19">인문교양교육</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-20">
-                                        <label for="chk-20">문화예술교육</label>
+                                        <input type="checkbox" id="chk-21">
+                                        <label for="chk-21">시민참여교육</label>
                                     </div>
                                 </div>
                             </td>
                         </tr>
                         <tr>
-                            <th class="txt-l">대표강좌 #1</th>
-                            <td>한국어음운론</td>
-                            <th class="txt-l">대표강좌 #2</th>
-                            <td></td>
-                            <th class="txt-l">대표강좌 #3</th>
-                            <td></td>
+                            <th class="txt-l">검색 키워드</th>
+                            <td colspan="5"></td>
                         </tr>
                     </tbody>
                 </table>
