--- a/work/IIP_500.html
+++ b/work/IIP_500.html
@@ -38,21 +38,15 @@
                         </div>
                     </li>
                     <li>
-                        <span class="tit">사용안내</span>
-                        <div class="link-item">
-                            <a href="#">사용처안내</a>
-                        </div>
-                    </li>
-                    <li>
                         <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
                             <a href="#">사용처 안내</a>
                             <a href="#">사용기관 신청 현황</a>
-                            <a href="#">이용권 사용내역</a>
-                            <a href="#">교육과정 정보</a>
-                            <a href="#">학습자 정보</a>
+                            <a href="#" class="hidden">이용권 사용내역</a>
+                            <a href="#" class="hidden">교육과정 정보</a>
+                            <a href="#" class="hidden">학습자 정보</a>
                             <a href="#">기관 정보 수정</a>
-                            <a href="#">사용기관 연수</a>
+                            <a href="#" class="hidden">사용기관 연수</a>
                             <a href="#">서약서 동의</a>
                         </div>
                     </li>
@@ -62,7 +56,7 @@
                             <a href="#">공지사항</a>
                             <a href="#">자료실</a>
                             <a href="#">자주하는질문</a>
-                            <a href="#">문의사항</a>
+                            <a href="#">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -76,94 +70,194 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">이용권사용기관</span>
-                <span class="arrow">공지사항(사용기관)</span>
+                <span class="arrow">사업안내</span>
+                <span class="arrow">사용기관 질의응답</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
-        <div class="page-header">
-            <h2 class="page-header-tit">사용기관 문의사항</h2>
-        </div>            
-        <div class="contents">
-            <div class="search-area">
-                <div class="flex-ac">
-                    <label for="select-box" class="blind">검색조건 선택</label>
-                    <select id="select-box" class="ui-select">
-                        <option value="1">전체</option>
-                        <option value="1">제목</option>
-                        <option value="1">내용</option>
-                    </select>
-                    <div class="search-input">
-                        <label for="search-bar" class="blind">검색어 입력</label>              
-                        <input type="text" id="search-bar">          
-                        <button type="button" class="btn-search">검색</button>
+        <div class="tab-area">  
+            <ul class="tab-list">
+                <li role="tab" aria-selected="true" aria-controls="tab-1" data-tab="tab-1">
+                    <a href="#tab-1">자주하는 질문</a>
+                </li>
+                <li role="tab" aria-selected="false" aria-controls="tab-2" data-tab="tab-2">
+                    <a href="#tab-2">사용기관 질의응답</a>
+                </li>
+            </ul>
+            <div class="tab-conts-wrap">
+                <div id="tab-1" role="tab-panel" class="tab-cont show">
+                    <div class="page-header">
+                        <h2 class="page-header-tit">자주하는 질문</h2>
+                    </div>            
+                    <div class="contents">
+                        <div class="search-area">
+                            <div class="flex-ac">
+                                <label for="select-box" class="blind">검색조건 선택</label>
+                                <select id="select-box" class="ui-select">
+                                    <option value="1">전체</option>
+                                    <option value="1">제목</option>
+                                    <option value="1">내용</option>
+                                </select>
+                                <div class="search-input">
+                                    <label for="search-bar" class="blind">검색어 입력</label>              
+                                    <input type="text" id="search-bar">          
+                                    <button type="button" class="btn-search">검색</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="top-info-group">
+                            <p class="top-info-group-data">총 <strong>2</strong>건</p>
+                            <div class="right-wrap flex-ac">
+                                <label for="select-view" class="blind">노출 조건 선택</label>
+                                <select id="select-view">
+                                    <option value="1">10건 보기</option>
+                                    <option value="2">20건 보기</option>
+                                    <option value="3">30건 보기</option>
+                                </select>
+                                <button type="button" class="btns bg-blue">등록</button>
+                            </div>
+                        </div>
+                        <div class="com-view-table">
+                            <table>
+                                <caption>자주하는 질문 테이블</caption>
+                                <colgroup>
+                                    <col style="width: 10%;">                            
+                                    <col style="width: 10%;">
+                                    <col>
+                                    <col style="width: 10%;">
+                                    <col style="width: 12%;">
+                                    <col style="width: 10%;">
+                                </colgroup>
+                                <thead>
+                                    <tr>
+                                        <th>번호</th>
+                                        <th>이용권 구분</th>
+                                        <th>제목</th>
+                                        <th>작성자</th>
+                                        <th>작성일</th>
+                                        <th>처리상태</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>홍길동</td>
+                                        <td>2024-10-02</td>
+                                        <td>완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="com-paging">
+                            <button class="prev">이전</button>
+                            <button class="on">1</button>
+                            <button>2</button>
+                            <button>3</button>
+                            <button>4</button>
+                            <button>5</button>
+                            <span class="empty">...</span>
+                            <button>120</button>
+                            <button class="next">다음</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="top-info-group">
-                <p class="top-info-group-data">총 <strong>2</strong>건</p>
-                <div class="right-wrap flex-ac">
-                    <label for="select-view" class="blind">노출 조건 선택</label>
-                    <select id="select-view">
-                        <option value="1">10건 보기</option>
-                        <option value="2">20건 보기</option>
-                        <option value="3">30건 보기</option>
-                    </select>
-                    <button type="button" class="btns bg-blue">등록</button>
-                </div>
-            </div>
-            <div class="com-view-table">
-                <table>
-                    <caption>공지사항 안내 테이블</caption>
-                    <colgroup>
-                        <col style="width: 10%;">                            
-                        <col style="width: 10%;">
-                        <col>
-                        <col style="width: 10%;">
-                        <col style="width: 12%;">
-                        <col style="width: 10%;">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>번호</th>
-                            <th>이용권 구분</th>
-                            <th>제목</th>
-                            <th>작성자</th>
-                            <th>작성일</th>
-                            <th>처리상태</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>디지털</td>
-                            <td>이용권 문의사항</td>
-                            <td>홍길동</td>
-                            <td>2024-10-02</td>
-                            <td>완료</td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>디지털</td>
-                            <td>이용권 문의사항</td>
-                            <td>관리자</td>
-                            <td>2024-09-12</td>
-                            <td>미완료</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="com-paging">
-                <button class="prev">이전</button>
-                <button class="on">1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <span class="empty">...</span>
-                <button>120</button>
-                <button class="next">다음</button>
+                <div id="tab-2" role="tab-panel" class="tab-cont">
+                    <div class="page-header">
+                        <h2 class="page-header-tit">사용기관 질의응답</h2>
+                    </div>            
+                    <div class="contents">
+                        <div class="search-area">
+                            <div class="flex-ac">
+                                <label for="select-box" class="blind">검색조건 선택</label>
+                                <select id="select-box" class="ui-select">
+                                    <option value="1">전체</option>
+                                    <option value="1">제목</option>
+                                    <option value="1">내용</option>
+                                </select>
+                                <div class="search-input">
+                                    <label for="search-bar" class="blind">검색어 입력</label>              
+                                    <input type="text" id="search-bar">          
+                                    <button type="button" class="btn-search">검색</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="top-info-group">
+                            <p class="top-info-group-data">총 <strong>2</strong>건</p>
+                            <div class="right-wrap flex-ac">
+                                <label for="select-view" class="blind">노출 조건 선택</label>
+                                <select id="select-view">
+                                    <option value="1">10건 보기</option>
+                                    <option value="2">20건 보기</option>
+                                    <option value="3">30건 보기</option>
+                                </select>
+                                <button type="button" class="btns bg-blue">등록</button>
+                            </div>
+                        </div>
+                        <div class="com-view-table">
+                            <table>
+                                <caption>자주하는 질문 테이블</caption>
+                                <colgroup>
+                                    <col style="width: 10%;">                            
+                                    <col style="width: 10%;">
+                                    <col>
+                                    <col style="width: 10%;">
+                                    <col style="width: 12%;">
+                                    <col style="width: 10%;">
+                                </colgroup>
+                                <thead>
+                                    <tr>
+                                        <th>번호</th>
+                                        <th>이용권 구분</th>
+                                        <th>제목</th>
+                                        <th>작성자</th>
+                                        <th>작성일</th>
+                                        <th>처리상태</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>홍길동</td>
+                                        <td>2024-10-02</td>
+                                        <td>완료</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>디지털</td>
+                                        <td>이용권 질의응답</td>
+                                        <td>관리자</td>
+                                        <td>2024-09-12</td>
+                                        <td>미완료</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="com-paging">
+                            <button class="prev">이전</button>
+                            <button class="on">1</button>
+                            <button>2</button>
+                            <button>3</button>
+                            <button>4</button>
+                            <button>5</button>
+                            <span class="empty">...</span>
+                            <button>120</button>
+                            <button class="next">다음</button>
+                        </div>
+                    </div>
+                </div>                
             </div>
         </div>
     </div>
