--- a/work/IIP_501.html
+++ b/work/IIP_501.html
@@ -38,21 +38,15 @@
                         </div>
                     </li>
                     <li>
-                        <span class="tit">사용안내</span>
-                        <div class="link-item">
-                            <a href="#">사용처안내</a>
-                        </div>
-                    </li>
-                    <li>
                         <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
                             <a href="#">사용처 안내</a>
                             <a href="#">사용기관 신청 현황</a>
-                            <a href="#">이용권 사용내역</a>
-                            <a href="#">교육과정 정보</a>
-                            <a href="#">학습자 정보</a>
+                            <a href="#" class="hidden">이용권 사용내역</a>
+                            <a href="#" class="hidden">교육과정 정보</a>
+                            <a href="#" class="hidden">학습자 정보</a>
                             <a href="#">기관 정보 수정</a>
-                            <a href="#">사용기관 연수</a>
+                            <a href="#" class="hidden">사용기관 연수</a>
                             <a href="#">서약서 동의</a>
                         </div>
                     </li>
@@ -62,7 +56,7 @@
                             <a href="#">공지사항</a>
                             <a href="#">자료실</a>
                             <a href="#">자주하는질문</a>
-                            <a href="#">문의사항</a>
+                            <a href="#">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -76,23 +70,20 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">이용권사용기관</span>
-                <span class="arrow">사용기관 문의사항</span>
-                <span class="arrow">사용기관 문의사항 등록</span>
+                <span class="arrow">이용권 사용기관</span>
+                <span class="arrow">사용기관 질의응답</span>
+                <span class="arrow">사용기관 질의응답 등록</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">사용기관 문의사항</h2>
+            <h2 class="page-header-tit">사용기관 질의응답</h2>
         </div>
         <div class="contents">
-            <div class="top-info-group">
-                <h3>사용기관 문의사항</h3>
-            </div>
             <div class="com-write-table">
                 <table class="inquiry">
-                    <caption>사용기관 문의사항 상세 항목 테이블</caption>
+                    <caption>사용기관 질의사항 상세 항목 테이블</caption>
                     <colgroup>
                         <col style="width: 300px;">
                         <col>
