--- a/work/IIP_600.html
+++ b/work/IIP_600.html
@@ -38,21 +38,15 @@
                         </div>
                     </li>
                     <li>
-                        <span class="tit">사용안내</span>
-                        <div class="link-item">
-                            <a href="#">사용처안내</a>
-                        </div>
-                    </li>
-                    <li>
                         <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
                             <a href="#">사용처 안내</a>
                             <a href="#">사용기관 신청 현황</a>
-                            <a href="#">이용권 사용내역</a>
-                            <a href="#">교육과정 정보</a>
-                            <a href="#">학습자 정보</a>
+                            <a href="#" class="hidden">이용권 사용내역</a>
+                            <a href="#" class="hidden">교육과정 정보</a>
+                            <a href="#" class="hidden">학습자 정보</a>
                             <a href="#">기관 정보 수정</a>
-                            <a href="#">사용기관 연수</a>
+                            <a href="#" class="hidden">사용기관 연수</a>
                             <a href="#">서약서 동의</a>
                         </div>
                     </li>
@@ -62,7 +56,7 @@
                             <a href="#">공지사항</a>
                             <a href="#">자료실</a>
                             <a href="#">자주하는질문</a>
-                            <a href="#">문의사항</a>
+                            <a href="#">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -76,8 +70,8 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">이용권사용기관</span>
-                <span class="arrow"><span class="arrow">사용기관 연수</span></span>
+                <span class="arrow">이용권 사용기관</span>
+                <span class="arrow">사용기관 연수</span>
             </div>
         </div>
     </div>
@@ -136,7 +130,7 @@
                     </p>
                     <div class="flex-ac">
                         <button type="button" class="btns">맞아요</button>
-                        <button type="button" class="btns bg-gray">아니에요</button>
+                        <button type="button" class="btns bg-gray no-sign">아니에요</button>
                     </div>
                 </dd>
                 <dd class="flex-acjs">
@@ -146,7 +140,7 @@
                     </p>
                     <div class="flex-ac">
                         <button type="button" class="btns">맞아요</button>
-                        <button type="button" class="btns bg-gray">아니에요</button>
+                        <button type="button" class="btns bg-gray no-sign">아니에요</button>
                     </div>
                 </dd>
                 <dd class="flex-acjs">
@@ -156,12 +150,12 @@
                     </p>
                     <div class="flex-ac">
                         <button type="button" class="btns">맞아요</button>
-                        <button type="button" class="btns bg-gray">아니에요</button>
+                        <button type="button" class="btns bg-gray no-sign">아니에요</button>
                     </div>
                 </dd>
             </dl>
             <div class="btns-bottom">
-                <button type="submit" class="btns">정답제출</button>
+                <button type="submit" class="btns mw-140">정답제출</button>
             </div>      
         </div>
     </div>
