--- a/work/LCP_001.html
+++ b/work/LCP_001.html
@@ -16,6 +16,7 @@
     <script src="../js/biz2/script.js"></script>
     <title>울산광역시 평생교육이용원</title>
 </head>
+
 <body>
     <header>
         <div class="logo-area">
@@ -65,197 +66,46 @@
             </div>
         </div>
     </header>
-    <div class="top-location">
-        <div class="top-location-area wrap">
-            <span class="home"><span class="blind">홈</span></span>
-            <div class="location-box">
-                <span class="arrow">이용권 사용기관</span>
-                <span class="arrow">이용권 사용내역</span>
-            </div>
-        </div>
-    </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">이용권 사용내역</h2>
+            <h2 class="page-header-tit">본인인증</h2>
+            <p class="page-header-desc">최초 사업을 신청하는 이용자일 경우 개인정보 수집동의와 이용약관 동의가 필요합니다.</p>
         </div>
-        <div class="contents">
-            <div class="top-info-group">
-                <h3>2024년 매핑 대기건</h3>
-            </div>
-            <div class="mapping-area">
-                <div class="mapping flex-acjs">
-                    <dl>
-                        <dt>정상 승인건</dt>
-                        <dd>0</dd>
-                    </dl>
-                    <dl>
-                        <dt>정상 승인건</dt>
-                        <dd>0</dd>
-                    </dl>
-                    <dl>
-                        <dt>정상 승인건</dt>
-                        <dd>0</dd>
-                    </dl>
-                </div>
-                <p>* 상단의 바우처 사용정보는 매핑 대기건(미매핑)의 정상승인건, 부분취소건에 대한 정보로 사용기관 및 가맹점번호 정보 변경에 따라 달라질 수 있습니다.</p>
-            </div>
-            <div class="search-box">
-                <form>
-                    <fieldset>
-                        <legend>이용권 사용내역 검색영역</legend>
-                        <div class="search-list">
-                            <dl>
-                                <dt><label for="srch01">사업년도</label></dt>
-                                <dd>
-                                    <select name="" id="srch01">
-                                        <option value="">2024</option>
-                                    </select>
-                                </dd>                    
-                            </dl>
-                            <dl>
-                                <dt><label for="srch02">이용권 구분</label></dt>
-                                <dd>
-                                    <select name="" id="srch02">
-                                        <option value="">전체</option>
-                                    </select>
-                                </dd>                    
-                            </dl>
-                            <dl class="period">
-                                <dt><label for="srch03">승인기간</label></dt>                            
-                                <dd>
-                                    <input type="date" id="srch03" class="date"> <span class="dash">~</span> <input type="date" class="date">
-                                    <span class="btn-wrap">
-                                        <button type="button" class="btn-bd">2024</button>
-                                        <button type="button" class="btn-bd">2023</button>
-                                    </span>
-                                    <small class="txt-s">(연도별 전체 검색시)</small>
-                                </dd>                 
-                            </dl>
-                            <dl>
-                                <dt><label for="srch04">카드번호</label></dt>
-                                <dd><input type="text" id="srch04"></dd>         
-                            </dl>
-                            <dl>
-                                <dt><label for="srch05">승인번호</label></dt>
-                                <dd><input type="text" id="srch05"></dd>                    
-                            </dl>
-                            <dl>
-                                <dt><label for="srch06">이용자명</label></dt>
-                                <dd><input type="text" id="srch06"></dd>                    
-                            </dl>
-                            <dl>
-                                <dt><label for="srch07">승인여부</label></dt>
-                                <dd>
-                                    <select name="" id="srch07">
-                                        <option value="">정상승인+부분취소</option>
-                                    </select> 
-                                </dd>                   
-                            </dl>
-                            <dl>
-                                <dt><label for="srch08">매핑여부</label></dt>
-                                <dd>
-                                    <select name="" id="srch08">
-                                        <option value="">전체</option>
-                                    </select>
-                                </dd>                   
-                            </dl>
-                            <dl>
-                                <dt><label for="srch09">출결여부</label></dt>
-                                <dd>
-                                    <select name="" id="srch09">
-                                        <option value="">전체</option>
-                                    </select>
-                                </dd>                    
-                            </dl>
-                        </div>
-                    </fieldset>
-                </form> 
-                <button type="submit" class="btns">검색</button>
-            </div>           
-            <ul class="add-notice">
-                <li>* 승인취소 건도 1건으로 조회되며 <em class="color-red">전체 승인취소, 매입취소 건은 붉은색</em>, <em class="color-blue">부분취소 건은 파란색</em> 폰트로 출력됩니다.</li>
-                <li>* 학습자 정보 등록 불가 내역은 리스트에 포함되지 않으며 [학습자 정보 등록 불가 내역] 팝업에서 확인 가능합니다.</li>
-                <li>* 이용권 사용 내역과 실제 사용기관의 바우처 결제 내역이 불일치할 경우 평생교육바우처실로 문의 바랍니다.</li>
-                <li>* 문의 : 홈페이지 사용기관 문의사항 및 평생교육이용권 이메일(lllcard@nile.or.kr)</li>
-            </ul>
-            <div class="top-info-group">
-                <div class="top-info flex-ac">
-                    <p class="top-info-group-data">총 <strong>2</strong>건</p>
-                    <div class="border-box flex-ac">
-                        <p class="flex-ac"><img src="../images/biz2/ico/ico_unmapped.svg" alt="매핑"> : 미매핑 / 출결 미등록</p>
-                        <p class="flex-ac"><img src="../images/biz2/ico/ico_complete.svg" alt="매핑">: 매핑 완료 / 출결 등록</p>
+        <div class="top-info-group">
+            <h3>약관동의</h3>
+        </div>
+        <div class="agree-box">
+            <div class="agree">
+                <h5 class="agree-tit">[필수] 이용약관</h5>
+                <button class="agree-btn" onclick="$('[data-pop=pop-1]').show();">내용보기</button>
+                <div class="agree-radio">
+                    <span>이용약관에 대한 안내 사항을 읽고 동의합니다.</span>
+                    <div class="radio-box">
+                        <input type="radio" id="agree1" name="agree1" value="no">
+                        <label for="agree1">동의안함</label>
+                        <input type="radio" id="agree2" name="agree1" value="yes">
+                        <label for="agree2">동의함</label>
                     </div>
                 </div>
-                <button type="button" class="btns bg-blue">엑셀 다운로드</button>
             </div>
-            <div class="com-view-table">
-                <table>
-                    <caption>이용권 사용내역 테이블</caption>
-                    <colgroup>
-                        <col style="width:10%;">
-                        <col style="width:12%;">
-                        <col style="width:12%;">
-                        <col style="width:12%;">
-                        <col>
-                        <col style="width:10%;">
-                        <col style="width:12%;">
-                        <col style="width:8%;">
-                        <col style="width:8%;">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>가맹점명</th>
-                            <th>승인일시</th>
-                            <th>승인번호</th>
-                            <th>승인금액</th>
-                            <th>이용권구분</th>
-                            <th>이용자명</th>
-                            <th>부분취소 금액</th>
-                            <th>매핑</th>
-                            <th>출결</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>배치</td>
-                            <td>2024.06.21<br>
-                                09:09:00</td>
-                            <td>12341234</td>
-                            <td>10,000</td>
-                            <td>서울시 은평구</td>
-                            <td>홍길*</td>
-                            <td></td>
-                            <td><img src="../images/biz2/ico/ico_complete.svg" alt="매핑"></td>
-                            <td><button class="sample-pop-btn ico" onclick="$('[data-pop=pop-2]').show();">매핑선택</button></td>
-                        </tr>
-                        <tr>
-                            <td>배치</td>
-                            <td>2024.06.21<br>
-                                09:09:00</td>
-                            <td>12341234</td>
-                            <td>10,000</td>
-                            <td>서울시 은평구</td>
-                            <td>홍길*</td>
-                            <td></td>
-                            <td><button class="sample-pop-btn ico" onclick="$('[data-pop=pop-1]').show();">출결선택</button></td>
-                            <td></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="com-paging">
-                <button class="prev">이전</button>
-                <button class="on">1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <span class="empty">...</span>
-                <button>120</button>
-                <button class="next">다음</button>
+            <div class="agree">
+                <h5 class="agree-tit">[필수] 개인정보 수집 · 이용 내역</h5>
+                <button class="agree-btn" onclick="$('[data-pop=pop-2]').show();">내용보기</button>
+                <div class="agree-radio">
+                    <span>이용약관에 대한 안내 사항을 읽고 동의합니다.</span>
+                    <div class="radio-box">
+                        <input type="radio" id="agree3" name="agree2" value="no">
+                        <label for="agree3">동의안함</label>
+                        <input type="radio" id="agree4" name="agree2" value="yes">
+                        <label for="agree4">동의함</label>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>     
+        <div class="btns-bottom">
+            <a href="javascript:;" class="btns">다음</a>
+        </div>
+    </div>
     <footer class="wrap">
         <div class="info-content">
             <span class="footer-logo"><span class="blind">평생교육이용권</span></span>
@@ -289,7 +139,7 @@
     <div class="layer-pop" data-pop="pop-1">
         <div class="layer-content" style="--max-width: 840px">
             <div class="layer-scroll">
-                <span class="title">학습자 매핑</span>
+                <span class="title">평생교육이용권 홈페이지 이용약관</span>
                 <div class="info-area">
                         <div class="search-box">
                             <label for="name">교육과정명</label>
@@ -345,7 +195,7 @@
     <div class="layer-pop" data-pop="pop-2">
         <div class="layer-content" style="--max-width: 840px">
             <div class="layer-scroll">
-                <span class="title">사용 내역 별 수강 이력</span>
+                <span class="title">평생교육이용권 신청을 위한 개인정보 수집 · 이용 동의(필수)</span>
                 <div class="info-area">
                     <div class="table-box mg-0">
                         <div class="com-view-table">
@@ -403,4 +253,6 @@
         </div>
     </div>
 </body>
+
+
 </html>
