--- a/work/LNP_100.html
+++ b/work/LNP_100.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/biz2/layout.css">
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
-    <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
+    <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css" />
     <script src="../js/biz2/jquery-3.7.1.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
@@ -70,26 +70,26 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">이용권 사용기관</span>
-                <span class="arrow">공지사항(사용기관)</span>
+                <span class="arrow">게시판</span>
+                <span class="arrow">자료실</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">공지사항(사용기관)</h2>
-        </div>        
+            <h2 class="page-header-tit">자료실</h2>
+        </div>
         <div class="contents">
             <div class="search-area">
                 <div class="flex-ac">
                     <label for="select-box" class="blind">검색조건 선택</label>
                     <select id="select-box" class="ui-select">
-                        <option value="1">전체</option>
                         <option value="1">제목</option>
                         <option value="1">내용</option>
+                        <option value="1">작성자</option>
                     </select>
                     <div class="search-input">
-                        <label for="search-bar" class="blind"> 공지사항 검색어 입력</label>
+                        <label for="search-bar" class="blind"> 자료실 검색어 입력</label>
                         <input type="text" id="search-bar">
                         <button type="button" class="btn-search">검색</button>
                     </div>
@@ -123,20 +123,59 @@
                         <tr>
                             <td>1</td>
                             <td class="txt-l">
-                                <a href="#" class="com-view-title"><span class="table-label">공지</span> 지자체 평생교육이용권 시스템 일시중단 안내</a>
+                                <a href="INP_101.html" class="com-view-title">2024년 평생교육이용권 우수 이용자 재충전 신청 매뉴얼</a>
                             </td>
                             <td>2024-10-02</td>
                         </tr>
                         <tr>
-                            <td>1</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">지자체 평생교육이용권 시스템 일시 중단 안내</a></td>
-                            <td>2024-10-02</td>
+                            <td>2</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">평생교육이용권 사용기관 업무 매뉴얼</a></td>
+                            <td>2024-09-12</td>
                         </tr>
                         <tr>
-                            <td>1</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">지자체 평생교육이용권 시스템 일시 중단 안내</a></td>
-                            <td>2024-10-02</td>
+                            <td>3</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">평생교육이용권 사용기관 등록 안내서</a></td>
+                            <td>2024-09-10</td>
                         </tr>
+                        <tr>
+                            <td>4</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">연도별 평생교육이용권 지원사업 현황</a></td>
+                            <td>2024-08-25</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">2024년 평생교육이용권 신청 매뉴얼(모바일)</a></td>
+                            <td>2024-08-23</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">2024년 평생교육이용권 신청 매뉴얼(컴퓨터)</a></td>
+                            <td>2024-08-30</td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">2023년 평생교육이용권 우수이용자 온라인 신청 매뉴얼</a></td>
+                            <td>2024-07-29</td>
+                        </tr>
+                        <tr>
+                            <td>8</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">2022년 평생교육이용권 수기 공모전 수상작 사례집</a></td>
+                            <td>2024-07-10</td>
+                        </tr>
+                        <tr>
+                            <td>9</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">2023년 평생교육이용권 사용기관 업무 매뉴얼</a></td>
+                            <td>2024-06-12</td>
+                        </tr>
+                        <tr>
+                            <td>10</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">2023년 평생교육이용권 신청 매뉴얼(기준중위소득 65% 이하 대상자)</a></td>
+                            <td>2024-05-23</td>
+                        </tr>
+                        <!-- 조회 데이터 없을 시 -->
+                        <!-- <tr>
+                            <td colspan="3">조회된 데이터가 없습니다.</td>
+                        </tr> -->
                     </tbody>
                 </table>
             </div>
@@ -184,4 +223,5 @@
         </div>
     </footer>
 </body>
+
 </html>
