--- a/work/LNP_201.html
+++ b/work/LNP_201.html
@@ -2,20 +2,21 @@
 <html lang="ko">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css js inject -->
     <link rel="stylesheet" href="../css/biz2/reset.css">
     <link rel="stylesheet" href="../css/biz2/common.css">
     <link rel="stylesheet" href="../css/biz2/layout.css">
     <link rel="stylesheet" href="../css/biz2/main.css">
+    <link rel="stylesheet" href="../css/biz2/style.css">
     <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css" />
     <script src="../js/biz2/jquery-3.7.1.min.js"></script>
-    <script src="../js/biz2/js/swiper-bundle.min.js"></script>
-    <script src="../js/biz2/js/script.js"></script>
+    <script src="../js/biz2/swiper-bundle.min.js"></script>
+    <script src="../js/biz2/script.js"></script>
     <title>울산광역시 평생교육이용원</title>
 </head>
+
 <body>
     <header>
         <div class="logo-area">
@@ -37,15 +38,21 @@
                         </div>
                     </li>
                     <li>
+                        <span class="tit">사용안내</span>
+                        <div class="link-item">
+                            <a href="#">사용처안내</a>
+                        </div>
+                    </li>
+                    <li>
                         <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
                             <a href="#">사용처 안내</a>
                             <a href="#">사용기관 신청 현황</a>
-                            <a href="#" class="hidden">이용권 사용내역</a>
-                            <a href="#" class="hidden">교육과정 정보</a>
-                            <a href="#" class="hidden">학습자 정보</a>
+                            <a href="#">이용권 사용내역</a>
+                            <a href="#">교육과정 정보</a>
+                            <a href="#">학습자 정보</a>
                             <a href="#">기관 정보 수정</a>
-                            <a href="#" class="hidden">사용기관 연수</a>
+                            <a href="#">사용기관 연수</a>
                             <a href="#">서약서 동의</a>
                         </div>
                     </li>
@@ -55,7 +62,7 @@
                             <a href="#">공지사항</a>
                             <a href="#">자료실</a>
                             <a href="#">자주하는질문</a>
-                            <a href="#">질의응답</a>
+                            <a href="#">문의사항</a>
                         </div>
                     </li>
                 </ul>
@@ -69,84 +76,71 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">이용권사용기관</span>
-                <span class="arrow">서약서 동의</span>
+                <span class="arrow">게시판</span>
+                <span class="arrow">자주하는질문</span>
+                <span class="arrow">자주하는질문 상세</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">페이지 제목 (임시)</h2>
+            <h2 class="page-header-tit">자주하는질문 상세</h2>
         </div>
-        <div class="top-info-group">
-            <h3>서약서 첨부</h3>
-        </div>
-        <div class="table-box">
-            <div class="com-write-table">
+        <div class="contents qna">
+            <div class="top-info-group">
+                <h3 class="ico">질문</h3>
+                <span>등록일 : 2022-01-07</span>
+            </div>
+            <div class="com-write-table qna-table">
                 <table>
-                    <caption></caption>
-                    <colgroup>
-                        <col style="width: 300px;">
-                        <col>
-                    </colgroup>
+                    <caption>자주하는 질문 상세</caption>
+                    <thead>
+                        <tr>
+                            <th>크롬(Chrome)브라우저를 통한 평생교육이용권 신청 시 인증실패 조치방법</th>
+                        </tr>
+                    </thead>
                     <tbody>
                         <tr>
-                            <th class="txt-l">
-                                <label class="must-type">동의방식</label>   
-                            </th>
                             <td>
-                                <input type="checkbox" id="a">
-                                <label for="a">전자서명</label>
+                                <span class="ico qna-answer">답변</span>
+                                <div class="qna-answer-details">
+                                    안녕하세요.<br>
+                                    국가평생교육진흥원 평생교육이용권실에서 알려드립니다.<br>
+                                    평생교육이용권 신청 본인인증 과정에서 발생할 수 있는 인증실패에 대한 안내 및 조치 방법을 공유 드립니다.<br><br>
+                                    
+                                    인증실패는 크롬(Chrome) 브라우저 신규버전 (80버전)에서 도메인 간 Cookie 활용 금지에 따라 발생하는 상황으로 이에 다른 보안조치를 완료("21.1")한 바 있습니다.
+                                    이에 따라 크롬(Chrome) 브라우저 사용 시 신규 웹페이지 적용을 위하여 과거 웹페이지 접속 기록을 삭제 후 재시도 해주시기 바랍니다.
+                                     ※ 삭제 방법 : 첨부파일 참조<br><br>
+
+                                    아울러 지속적인 인증실패 발생 시 크롬(Chrome)외 브라우저 사용 또는 모바일 앱을 이용한 인증을 권장 드리며, 공동인증서(구 공인인증서)를 이용한 본인인증도 가능하오니 활용하여 주시기 바랍니다. <br><br>
+
+                                    감사합니다.
+                                </div>
                             </td>
                         </tr>
                         <tr>
-                            <th class="txt-l">
-                                <label for="b" class="must-type">사용기관명</label>   
-                            </th>
+                            <!-- <span class="qna-attached">첨부파일</span>
+                            <div class="attached-file">
+                                <img src="../images/biz2/ico/ico_pdf.svg" alt="PDF이미지" class="ico-pdf">
+                                시스템 공지 안내문 
+                            </div>   
+                            <button type="button" class="btns ico btn-download">다운로드</button>    -->
                             <td>
-                                <input type="text" id="b">
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="txt-l">
-                                <label for="c" class="must-type">대표자명</label>   
-                            </th>
-                            <td>
-                                <input type="text" id="c">
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="txt-l">
-                                <label class="must-type">서약서 전송 방식</label>   
-                            </th>
-                            <td>
-                                <input type="checkbox" id="d">
-                                <label for="d">핸드폰번호</label>
-                                <input type="checkbox" id="e">
-                                <label for="e">이메일</label>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="txt-l">
-                                <label class="must-type">이메일</label>
-                            </th>
-                            <td>
-                                <input type="email">
-                                @
-                                <input type="email">
-                                <select>
-                                    <option value="none">직접입력</option>
-                                    <option value="naver">naver.com</option>
-                                    <option value="google">google.com</option>
-                                </select>
+                                <span class="qna-attached">첨부파일</span>
+                                <div class="add-file">
+                                    <div class="attached-file">
+                                        <img src="../images/biz2/ico/ico_pdf.svg" alt="PDF이미지" class="ico-pdf">
+                                        인터넷접속기록삭제방법.hwp [110288 byte]
+                                    </div>   
+                                    <button type="button" class="btns ico btn-download">다운로드</button>
+                                </div>
                             </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <p>* 대표자의 핸드폰 번호 또는 이메일은 전자서명을 위해서만 사용하고, 저장하지 않습니다.</p>
-            <div class="txt-c">
-                <a href="#">전송하기</a>
+            <div class="btns-bottom">
+                <a href="javascript:;" class="btns">목록</a>
             </div>
         </div>
     </div>
@@ -181,4 +175,5 @@
         </div>
     </footer>
 </body>
+
 </html>
