(20241203) 평생교육권이란 index 추가

--- a/work/index.html
+++ b/work/index.html
@@ -335,6 +335,14 @@
       <tbody>
         <tr class="line done">
           <th>평생교육이용권</th>
+          <td>평생교육이용권이란?</td>
+          <td>page</td>
+          <td><a href="./IGP_001.html" target="blank">IGP_001.html</a></td>
+          <td class="ac"></td>
+          <td></td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
           <td>사용기관 로그인</td>
           <td>page</td>
           <td><a href="./LMP_001.html" target="blank">LMP_001.html</a></td>
@@ -535,6 +543,10 @@
           <td class="ac"></td>
           <td></td>
         </tr>
+        
+
+
+
       </tbody>
     </table>
   </div>
