(20241203) 자주묻는 질문 인덱스 추가

--- a/work/index.html
+++ b/work/index.html
@@ -527,7 +527,7 @@
           <td class="ac">O</td>
           <td></td>
         </tr>
-        <tr class="line">
+        <tr class="line done">
           <th>평생교육이용권</th>
           <td>자주하는질문</td>
           <td>page</td>
@@ -535,7 +535,7 @@
           <td class="ac"></td>
           <td></td>
         </tr>
-        <tr class="line">
+        <tr class="line done">
           <th>평생교육이용권</th>
           <td>자주하는질문 상세</td>
           <td>page</td>
