LCP index페이지 누락 추가

--- a/work/index.html
+++ b/work/index.html
@@ -337,6 +337,14 @@
           <th>평생교육이용권</th>
           <td>평생교육이용권이란?</td>
           <td>page</td>
+          <td><a href="./LCP_001.html" target="blank">LCP_001.html</a></td>
+          <td class="ac"></td>
+          <td></td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>평생교육이용권이란?</td>
+          <td>page</td>
           <td><a href="./IGP_001.html" target="blank">IGP_001.html</a></td>
           <td class="ac"></td>
           <td></td>
@@ -543,10 +551,6 @@
           <td class="ac"></td>
           <td></td>
         </tr>
-        
-
-
-
       </tbody>
     </table>
   </div>
