(20241203) 이민혁 공유 전 host 추가

--- a/work/LCP_001.html
+++ b/work/LCP_001.html
@@ -77,7 +77,7 @@
         <div class="agree-box">
             <div class="agree">
                 <h5 class="agree-tit">[필수] 이용약관</h5>
-                <button class="agree-btn" onclick="$('[data-pop=pop-1]').show();">내용보기</button>
+                <button class="agree-btn layer-btn" onclick="$('[data-pop=pop-1]').show();">내용보기</button>
                 <div class="agree-radio">
                     <span>이용약관에 대한 안내 사항을 읽고 동의합니다.</span>
                     <div class="radio-box">
@@ -141,117 +141,123 @@
             <div class="layer-scroll">
                 <span class="title">평생교육이용권 홈페이지 이용약관</span>
                 <div class="info-area">
-                        <div class="search-box">
-                            <label for="name">교육과정명</label>
-                            <input type="text" id="name">
-                            <button class="btns">검색</button>
+                    <div class="agree-box">
+                        <h3>제 1장 총칙</h3>
+                        <div class="agree-detail">
+                            <h4>제 1조 (목적)</h4>
+                            <ol>
+                                <li>
+                                    이 약관은 국가평생교육진흥원(이하 ‘NILE’)이 운영하는 평생교육이용권 지원 시스템(이하 “당 사이트“)이 제공하는 모든 회원정보 서비스
+                                    (이하 ‘서비스‘)를 이용하는 고객(이하＇회원‘)과 ‘당 사이트＇가 ‘서비스＇의 이용에 관한 사항을 전기통신사업법 및 동법 시행령, ‘개인정보처리방침’에서 정하는 바를 준수하고 약정하는 것을 그 목적으로 합니다.
+                                </li>
+                            </ol>  
                         </div>
-                        <div class="table-box">
-                            <div class="com-view-table">
-                                <table summary="">
-                                    <caption></caption>
-                                    <colgroup>
-                                    <col>
-                                    <col>
-                                    <col>
-                                    <col>
-                                    <col>
-                                    <col>
-                                    </colgroup>
-                                    <thead>
-                                        <tr>
-                                            <th>강좌명</th>
-                                            <th>분반</th>
-                                            <th>교육방법</th>
-                                            <th>강좌시작일</th>
-                                            <th>강좌종료일</th>
-                                            <th>등록</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td class="no-data" colspan="6">조회를 해주세요.</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+                        <div class="agree-detail">
+                            <h4>제 2조 (목적)</h4>
+                            <ol>
+                                <li>
+                                    이 약관은 국가평생교육진흥원(이하 ‘NILE’)이 운영하는 평생교육이용권 지원 시스템(이하 “당 사이트“)이 제공하는 모든 회원정보 서비스
+                                    (이하 ‘서비스‘)를 이용하는 고객(이하＇회원‘)과 ‘당 사이트＇가 ‘서비스＇의 이용에 관한 사항을 전기통신사업법 및 동법 시행령, ‘개인정보처리방침’에서 정하는 바를 준수하고 약정하는 것을 그 목적으로 합니다.
+                                </li>
+                            </ol>  
                         </div>
-                    <div class="layer-text-box mt-80">
-                        <ul>
-                            <li class="layer-text-tit">※ 학습자 정보 추가 전 유의사항</li>
-                            <li class="layer-text-desc">- 이용권 카드 본인사용 확인(카드결제 정보내 이름과 실제 수강자명 일치여부 확인</li>
-                            <li class="layer-text-desc">- 평생교육강좌 수강료 및 이에 해당하는 교재 외 결제, 등록불가(교재 단독 결제 불가)</li>
-                            <li>※ 학습자 정보 추가 전 유의사항</li>
-                        </ul>
+                        <div class="agree-detail">
+                            <h4>제 3조 (목적)</h4>
+                            <ol>
+                                <li>
+                                    이 약관은 국가평생교육진흥원(이하 ‘NILE’)이 운영하는 평생교육이용권 지원 시스템(이하 “당 사이트“)이 제공하는 모든 회원정보 서비스
+                                    (이하 ‘서비스‘)를 이용하는 고객(이하＇회원‘)과 ‘당 사이트＇가 ‘서비스＇의 이용에 관한 사항을 전기통신사업법 및 동법 시행령, ‘개인정보처리방침’에서 정하는 바를 준수하고 약정하는 것을 그 목적으로 합니다.
+                                </li>
+                            </ol>  
+                        </div>
+                        <div class="agree-detail">
+                            <h4>제 4조 (목적)</h4>
+                            <ol>
+                                <li>
+                                    이 약관은 국가평생교육진흥원(이하 ‘NILE’)이 운영하는 평생교육이용권 지원 시스템(이하 “당 사이트“)이 제공하는 모든 회원정보 서비스
+                                    (이하 ‘서비스‘)를 이용하는 고객(이하＇회원‘)과 ‘당 사이트＇가 ‘서비스＇의 이용에 관한 사항을 전기통신사업법 및 동법 시행령, ‘개인정보처리방침’에서 정하는 바를 준수하고 약정하는 것을 그 목적으로 합니다.
+                                </li>
+                            </ol>  
+                        </div>
+                        <div class="agree-detail">
+                            <h4>제 17조 면책</h4>
+                            <ol>
+                                <li>‘NILE’이 천재지변 또는 불가피한 사정으로 ‘서비스’를 중단할 경우, ‘회원＇에게 발생되는 문제에 대해 책임을 지지 않습니다.</li>
+                            </ol>  
+                        </div>
+                        <div class="agree-detail">
+                            <h4>제 18조 (관할법원)</h4>
+                            <ol>
+                                <li>‘서비스’이용과 관련하여 소송이 제기될 경우 ‘NILE’의 소재지를 관할하는 법원 또는 대한민국의 민사소송법에 따른 법원을 관할법원으로 합니다. 본 약관의 해석과 적용 및 본 약관과 관련한 분쟁의 해결에는 대한민국법이 적용됩니다.</li>
+                            </ol>  
+                        </div>
+                        <div class="agree-detail">
+                            <h4>제 19조 (법원)</h4>
+                            <ol>
+                                <li>‘서비스’이용과 관련하여 소송이 제기될 경우 ‘NILE’의 소재지를 관할하는 법원 또는 대한민국의 민사소송법에 따른 법원을 관할법원으로 합니다. 본 약관의 해석과 적용 및 본 약관과 관련한 분쟁의 해결에는 대한민국법이 적용됩니다.</li>
+                            </ol>  
+                        </div>
                     </div>
                     <div class="layer-btn-wrap">
-                        <button class="btns" onclick="$('[data-pop=pop-1]').hide();">닫기</button>
+                        <button class="btns layer-close" onclick="$('[data-pop=pop-1]').hide();">확인</button>
                     </div>
                 </div>
-                <button class="close-btn" onclick="$('[data-pop=pop-1]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
+                <button class="close-btn layer-close" onclick="$('[data-pop=pop-1]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
             </div>
         </div>
     </div>
     <div class="layer-pop" data-pop="pop-2">
-        <div class="layer-content" style="--max-width: 840px">
+        <div class="layer-content" style="--max-width: 900px">
             <div class="layer-scroll">
                 <span class="title">평생교육이용권 신청을 위한 개인정보 수집 · 이용 동의(필수)</span>
                 <div class="info-area">
-                    <div class="table-box mg-0">
-                        <div class="com-view-table">
-                            <table summary="" class="table-auto">
-                                <caption></caption>
-                                <colgroup>
-                                <col>
-                                <col style="width: auto;">
-                                <col>
-                                <col>
-                                <col>
-                                </colgroup>
-                                <thead>
-                                    <tr>
-                                        <th>강좌명</th>
-                                        <th>강좌기간</th>
-                                        <th>출석일수/<br>시간/차수</th>
-                                        <th>이수여부</th>
-                                        <th>계좌제 연계</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>평생교육강좌</td>
-                                        <td>2024.11.13~2024.12.31</td>
-                                        <td>44일</td>
-                                        <td>이수중</td>
-                                        <td>학습미이수</td>
-                                    </tr>
-                                    <tr>
-                                        <td>평생교육강좌</td>
-                                        <td>2024.11.13~2024.12.31</td>
-                                        <td>44일</td>
-                                        <td>이수중</td>
-                                        <td>학습미이수</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                    <p>
+                        평생교육이용권 홈페이지에서 제공하는 인터넷 관련 서비스를 원활하게 수행하기 위하여 개인정보의 수집,유출,오용,남용으로부터 사생활의 비밀 등을 보호하도록 한 
+                        개인정보보호법 규정에 따라 다음과 같이 수집됩니다.
+                    </p>
+                    <div class="top-info-group">
+                        <h3>개인정보 수집 · 이용 동의</h3>
                     </div>
-                    <div class="layer-text-box mt-80">
-                        <ul>
-                            <li class="layer-text-tit color-red">※ 학습자 정보 추가 전 유의사항</li>
-                            <li class="layer-text-desc">- <em class="color-blue">이용권 카드 본인사용 확인</em>(카드결제 정보내 이름과 실제 수강자명 일치여부 확인</li>
-                            <li class="layer-text-desc">- 평생교육강좌 수강료 및 이에 해당하는 교재 외 결제, 등록불가(교재 단독 결제 불가)</li>
-                            <li>평생교육이용권 본인외 사용 및 목적외 사용 확인시 이용자 안내 후 카드 취소 처리 요청</li>
-                        </ul>
+                    <div class="com-view-table">
+                        <table class="mg-0">
+                            <caption>개인정보 수집 동의 세부 분류</caption>
+                            <colgroup>
+                                <col>
+                                <col>
+                                <col>
+                            </colgroup>
+                            <thead>
+                                <tr>
+                                    <th>강좌명</th>
+                                    <th>강좌분류</th>
+                                    <th>수강료</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>회원(이름, 주민등록번호), 평생학습계좌번호, 회원가입동의여부</td>
+                                    <td class="txt-l">
+                                        - 평생학습계좌제 이력관리<br>
+                                        - 평생교육이용권 홈페이지 회원관리<br>
+                                        - 연구 및 설문조사 관리
+                                    </td>
+                                    <td>5년, 회원탈퇴 시까지</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
+                    <ul class="bottom-info-group">
+                        <li> ※ 개인정보 수집 · 이용에 대한 동의를 거부할 권리가 있습니다. 선택 항목의 동의를 거부하셔도 평생교육이용권 신청 · 선정 · 지급에는 제한이 없으나 부가서비스 제공은 제한을 받습니다.</li>
+                    </ul>
                     <div class="layer-btn-wrap">
-                        <button class="btns" onclick="$('[data-pop=pop-2]').hide();">닫기</button>
+                        <button class="btns" onclick="$('[data-pop=pop-2]').hide();">확인</button>
                     </div>
                 </div>
                 <button class="close-btn" onclick="$('[data-pop=pop-2]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
             </div>
         </div>
     </div>
+
 </body>
 
 
