--- a/work/index.html
+++ b/work/index.html
@@ -335,10 +335,26 @@
       <tbody>
         <tr class="line done">
           <th>평생교육이용권</th>
-          <td>평생교육이용권이란?</td>
+          <td>본인인증 약관동의</td>
           <td>page</td>
           <td><a href="./LCP_001.html" target="blank">LCP_001.html</a></td>
-          <td class="ac"></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>본인인증</td>
+          <td>page</td>
+          <td><a href="./LCP_002.html" target="blank">LCP_002.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>본인인증 완료</td>
+          <td>page</td>
+          <td><a href="./LCP_003.html" target="blank">LCP_003.html</a></td>
+          <td class="ac">O</td>
           <td></td>
         </tr>
         <tr class="line done">
@@ -346,7 +362,7 @@
           <td>평생교육이용권이란?</td>
           <td>page</td>
           <td><a href="./IGP_001.html" target="blank">IGP_001.html</a></td>
-          <td class="ac"></td>
+          <td class="ac">O</td>
           <td></td>
         </tr>
         <tr class="line done">
@@ -355,8 +371,7 @@
           <td>page</td>
           <td><a href="./LMP_001.html" target="blank">LMP_001.html</a></td>
           <td class="ac">O</td>
-          <td>
-          </td>
+          <td></td>
         </tr>
         <tr class="line done">
           <th>평생교육이용권</th>
@@ -540,7 +555,7 @@
           <td>자주하는질문</td>
           <td>page</td>
           <td><a href="./LNP_200.html" target="blank">LNP_200.html</a></td>
-          <td class="ac"></td>
+          <td class="ac">O</td>
           <td></td>
         </tr>
         <tr class="line done">
@@ -548,7 +563,7 @@
           <td>자주하는질문 상세</td>
           <td>page</td>
           <td><a href="./LNP_201.html" target="blank">LNP_201.html</a></td>
-          <td class="ac"></td>
+          <td class="ac">O</td>
           <td></td>
         </tr>
       </tbody>
