--- a/work/LCP_002.html
+++ b/work/LCP_002.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +15,6 @@
     <script src="../js/biz2/script.js"></script>
     <title>울산광역시 평생교육이용원</title>
 </head>
-
 <body>
     <header>
         <div class="logo-area">
@@ -66,97 +64,55 @@
             </div>
         </div>
     </header>
-    <div class="top-location">
-        <div class="top-location-area wrap">
-            <span class="home"><span class="blind">홈</span></span>
-            <div class="location-box">
-                <span class="arrow">이용권 사용기관</span>
-                <span class="arrow">사용기관 연수</span>
-            </div>
-        </div>
-    </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">사용기관 연수</h2>
+            <h2 class="page-header-tit">본인인증</h2>
+            <p class="page-header-desc">평생교육이용권을 이용하기 위해 본인인증을 통한 본인확인 절차는 필수입니다.</p>
         </div>
-        <div class="contents">
-            <div class="top-info-group">
-                <h3>연수 개요</h3>
+        <div class="auth-area">
+            <div class="auth-area-in flex-ac">
+                <button class="ico simple">간편인증</button>
+                <button class="ico joint">공동인증서</button>
+                <button class="ico mo-auth">휴대폰인증</button>
+                <button class="ico i-pin">아이핀(i-pin)</button>
             </div>
-            <ul class="txt-list">
-                <li><strong>참여목적 : </strong>평생교육이용권 사용기관 업무 효율성 및 정보보호 인식 제고</li>
-                <li><strong>참여일정 : </strong>2024.11.14(월)~2024.12.30(금)</li>
-                <li><strong>참여방법 : </strong>아래 교육프로그램 바로가기 클릭</li>
-                <li><strong>참고사항 : </strong>바로가기 버튼을 클릭해도 이동하지 않을 경우 <a href="https:/www.test.co.kr" target="_blank" >https:/www.test.co.kr</a>로 이동해주세요.</li>
-            </ul>
-            <div class="top-info-group">
-                <h3>교육 프로그램</h3>
-            </div>
-            <div class="com-view-table">
-                <table class="table-edu">
-                    <caption>교육 프로그램 안내 테이블</caption>
-                    <colgroup>
-                        <col style="width: 30%;">
-                        <col>
-                        <col style="width: 20%;">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>프로그램명</th>
-                            <th>교육내용</th>
-                            <th>바로가기</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="txt-l">1.어서와! 개인정보보호법은 처음이지?</td>
-                            <td>개인정보보호법의 내용 및 필요성</td>
-                            <td><button type="button" class="btns bg-blue">재시청하기</button></td>
-                        </tr>
-                        <tr>
-                            <td class="txt-l">2. 개인정보 처리의 시작과 끝</td>
-                            <td>개인정보 처리의 단계별 준수사항</td>
-                            <td><button type="button" class="btns bg-blue">시청하기</button></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <dl class="quiz-area">
-                <dt>O/X 퀴즈 응모하기</dt>
-                <dd class="flex-acjs">
-                    <p>
-                        <span>Q1 .</span> 개인정보보호법은 사용기관에서 지켜야 할 필요가 없다.
-                        <small class="ico">관련내용 : 개인정보보호법이란?</small>
-                    </p>
-                    <div class="flex-ac">
-                        <button type="button" class="btns">맞아요</button>
-                        <button type="button" class="btns bg-gray no-sign">아니에요</button>
-                    </div>
-                </dd>
-                <dd class="flex-acjs">
-                    <p>
-                        <span>Q2 .</span> 개인정보보호법은 사용기관에서 지켜야 할 필요가 없다.
-                        <small class="ico">관련내용 : 개인정보보호법이란?</small>
-                    </p>
-                    <div class="flex-ac">
-                        <button type="button" class="btns">맞아요</button>
-                        <button type="button" class="btns bg-gray no-sign">아니에요</button>
-                    </div>
-                </dd>
-                <dd class="flex-acjs">
-                    <p>
-                        <span>Q3 .</span> 개인정보보호법은 사용기관에서 지켜야 할 필요가 없다.
-                        <small class="ico">관련내용 : 개인정보보호법이란?</small>
-                    </p>
-                    <div class="flex-ac">
-                        <button type="button" class="btns">맞아요</button>
-                        <button type="button" class="btns bg-gray no-sign">아니에요</button>
-                    </div>
-                </dd>
-            </dl>
-            <div class="btns-bottom">
-                <button type="submit" class="btns mw-140">정답제출</button>
-            </div>      
+        </div>
+        <div class="top-info-group">
+            <h3>본인인증 정보</h3>
+        </div>
+        <div class="com-write-table">
+            <table>
+                <caption>본인인증 정보 입력란</caption>
+                <colgroup>
+                    <col style="width: 200px;">
+                    <col>
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th class="txt-l">
+                            <label for="a">이름</label>
+                        </th>
+                        <td>
+                            <input type="text" id="a" class="mw-set">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">
+                            <label for="b">주민번호</label>
+                        </th>
+                        <td>
+                            <div class="flex-ac gap-10 mw-set">
+                                <input type="number" id="b" maxlength="6" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
+                                -
+                                <input type="password" id="c" maxlength="7" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="btns-bottom">
+            <a href="javascript:;" class="btns">인증</a>
         </div>
     </div>
     <footer class="wrap">
