index 페이지 + 자료실 상세 추가

--- a/work/LNP_101.html
+++ b/work/LNP_101.html
@@ -142,6 +142,19 @@
                     </tbody>
                 </table>
             </div>
+            <ul class="article-list">
+                <li class="prev-list">
+                    <a href="javascript:;" class="ico">이전 글</a> 
+                    [울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고
+                </li>
+                <li class="next-list">
+                    <a href="javascript:;" class="ico">다음 글</a>
+                    [울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고
+                </li>
+            </ul>
+            <div class="btns-bottom">
+                <a href="javascript:;" class="btns btn-list">목록</a>
+            </div>
         </div>
     </div>
     <footer class="wrap">
