--- a/work/index.html
+++ b/work/index.html
@@ -306,7 +306,7 @@
 
 <body>
   <div class="cont">
-    <h2>울산광역시 평생교육이용원</h2>
+    <h2>울산광역시 평생교육이용원 <span style="color: #999!important; font-size: 13px!important;">사용기관 (PC만 제작 반응형 X)</span></h2>
     <p style="margin-top: 10px; color: blue;">* 색상이 칠해진 행은 완료된 페이지입니다.</p>
     <span class="count-info">
       <span class="page">페이지 : <span></span></span>
